2009-02-25  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c: Fixed blurring of FKB (and full-screen
	dialogs) again. NB#103395
	* src/mb/hd-comp-mgr.c: Call update_blur on unregister, as we don't
	get an unmap event for the FKB.
	  
2009-02-25  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c:
	* src/home/hd-home-view.h:
	* src/home/hd-home.c:
	* src/home/hd-home.h:
	* src/home/hd-render-manager.h: Implement more changes in Home UI
	spec.

2009-02-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c:
	* src/home/hd-home.c:
	* src/home/hd-home.h: Implement some changes in Home UI spec.

2009-02-24  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-decor.c
	* src/home/hd-title-bar.c:
	NB#90445 - long window titles should be clipped to the screen. Removed
	non-centred code paths from hd-decor as they were never executed.

2009-02-24  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view-layout.c (added):
	* src/home/hd-home-view-layout.h (added):
	* src/home/Makefile.am: Add HdHomeViewLayout class which supports
	arranging applets according to the Home UI spec.

	* src/home/hd-home-view.c: Use new HdHomeViewLayout to arrange
	applets. Fixes: NB#101724

	* src/home/hd-home.c (hd_home_add_applet): Move applet positioning to
	HdHomeView.
	  (hd_home_show_applet_buttons): Hide settings icon. Fixes: NB#102994

	* src/mb/Makefile.am:
	* src/mb/hd-comp-mgr.c:
	* src/mb/hd-comp-mgr.h:
	* src/mb/hd-home-applet.c:
	* src/mb/hd-home-applet.h:
	* src/mb/hd-applet-layout-manager.c (deleted):
	* src/mb/hd-applet-layout-manager.h (deleted): Remove old, non
	working, applet arranging code.

2009-02-23  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/tidy/tidy-blur-group.c: Added workaround for GLSL shader
	compilation when the language includes ',' as a decimal separator

2009-02-23  Gordon Williams <gordon.williams@collabora.co.uk>
